--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "https://openapi.naver.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -54,4 +55,5 @@
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11"
   }
+
 }
