--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4",
@@ -48,6 +52,7 @@
     "@babel/preset-env": "^7.20.2",
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
@@ -55,5 +60,4 @@
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11"
   }
-
 }
