--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.3.1",
+    "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "ts-jest": "^29.0.3",
@@ -56,10 +61,13 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.3.1",
     "bootstrap": "^5.2.3",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
-    "react-bootstrap": "^2.7.0"
+    "postcss": "^8.4.20",
+    "react-bootstrap": "^2.7.0",
+    "tailwindcss": "^3.2.4"
   }
 }
