--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^1.2.1",
     "cross-env": "^7.0.3",
+    "daisyui": "^2.43.2",
     "dotenv": "^16.0.3",
     "jest": "^29.3.1",
     "query-string": "^7.1.3",
